--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32-c3-devkitc-02
 framework = arduino
+board_build.f_cpu = 16000000L
 
 [env]
 monitor_speed = 115200
+
