fix: torque to rot angle
I had used angluar-acc instead of angluar-velocity

--- a/control_loop/Makefile
+++ b/control_loop/Makefile
@@ -6,7 +6,7 @@
 
 CXXFLAGS += -I$(shell nix eval --raw nixpkgs#stdenv.cc.cc)/include
 
-compile_dev:
+compile_control:
 	clang++ control.cpp math_stuff.cpp -o control -std=c++20 -g3 \
 	-Wall -Wextra -Wconversion -Wdouble-promotion -Wno-unused-parameter \
 	-Wno-unused-function -Wno-sign-conversion -fsanitize=undefined -fsanitize-trap -pedantic
@@ -30,5 +30,8 @@ test:
 setup:
 	rm compile_commands.json
 	bear -- make compile_dev
+
+plot: compile_control
+	Rscript plot.R
 
 # end
