--- a/mpu_i2c/platformio.ini
+++ b/mpu_i2c/platformio.ini
@@ -12,3 +12,10 @@
 platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
+monitor_speed = 115200
+
+[env:esp32-c3-devkitc-02]
+platform = espressif32
+board = esp32-c3-devkitc-02
+framework = arduino
+monitor_speed = 115200
