--- a/system/platformio.ini
+++ b/system/platformio.ini
@@ -8,10 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitc-02]
+; [env:esp32-c3-devkitc-02]
+;platform = espressif32
+;board = esp32-c3-devkitc-02
+;framework = arduino
+;monitor_speed = 115200  
+
+[env:lilygo-t-display]
 platform = espressif32
-board = esp32-c3-devkitc-02
-framework = arduino
-
-
+board = lilygo-t-display
 monitor_speed = 115200
+framework = arduino
