--- a/system/platformio.ini
+++ b/system/platformio.ini
@@ -8,11 +8,23 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitc-02]
+[env]
 platform = espressif32
 board = esp32-c3-devkitc-02
 framework = arduino
 monitor_speed = 115200
+
+[env:release]
+build_type = release
+; build_flags =
+
+[env:debug]
+build_type = debug
+build_flags = -D DEBUG
+
+[env:debug_control]
+build_type = debug
+build_flags = -D DEBUG_CONTROL
 
 ; [env:lilygo-t-display]
 ; platform = espressif32
