fix: add test to sunsensor

--- a/system/Makefile
+++ b/system/Makefile
@@ -17,6 +17,10 @@ run:
 run_debug:
 	pio run -t upload -e debug
 
+run_debug_serial:
+	pio run -t upload -e serial
+	pio device monitor --raw
+
 run_debug_control:
 	pio run -t upload -e debug_control
 	pio device monitor --raw
