--- a/system/platformio.ini
+++ b/system/platformio.ini
@@ -20,7 +20,11 @@ build_type = release
 
 [env:debug]
 build_type = debug
-build_flags = -D DEBUG
+build_flags = -D DEBUG SERIAL
+
+[env:serial]
+build_type = debug
+build_flags = -D TEST
 
 [env:debug_control]
 build_type = debug
