fix: pwd res down, freq up, pwm test

--- a/system/Makefile
+++ b/system/Makefile
@@ -25,6 +25,10 @@ run_debug_control:
 	pio run -t upload -e debug_control
 	pio device monitor --raw
 
+run_debug_pwm:
+	pio run -t upload -e debug_pwm
+	pio device monitor --raw
+
 monitor:
 	pio device monitor --raw
 
