--- a/system/platformio.ini
+++ b/system/platformio.ini
@@ -30,6 +30,11 @@ build_flags = -D TEST
 build_type = debug
 build_flags = -D DEBUG_CONTROL
 
+
+[env:debug_pwm]
+build_type = debug
+build_flags = -D DEBUG_PWM
+
 ; [env:lilygo-t-display]
 ; platform = espressif32
 ; board = lilygo-t-display
