un-uncommentet env:debug

--- a/system/platformio.ini
+++ b/system/platformio.ini
@@ -18,9 +18,9 @@ monitor_speed = 115200
 build_type = release
 ; build_flags =
 
-;[env:debug]
-;build_type = debug
-;build_flags = -D DEBUG SERIAL
+[env:debug]
+build_type = debug
+build_flags = -D DEBUG SERIAL
 
 [env:serial]
 build_type = debug
